--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,49 @@
-.App {
-  text-align: center;
+.boxes{
+  display: grid;
+  gap:20px;
+  grid-template-columns: repeat(4,1fr);
+}
+.tareas{
+  display: flex;
+  align-items: center;
+
 }
 
+.box{
+  width: 200px;
+  height: 200px;
+  border: 10px solid black;
+}
+
+.tabs{
+  display: flex;
+  justify-content: center;
+  gap:15px;
+  flex-direction: row;
+}
+
+.active{
+  text-decoration: underline;
+  color:red;
+}
+
+.title{
+  cursor:pointer;
+}
+
+/* .App {
+  text-align: center;
+} */
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,11 +54,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +65,4 @@
     transform: rotate(360deg);
   }
 }
+ */
